--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,10 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
-    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.projectlombok:lombok:1.16.18')
+	compile('mysql:mysql-connector-java')
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
 }
